--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ android {
         applicationId "com.potop66.kalkulatorspalania.klakulatorspalania"
         minSdkVersion 9
         targetSdkVersion 21
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
