--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:noHistory="true" >
+             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,26 +19,20 @@
         </activity>
         <activity
             android:name=".MainActivity2"
-            android:label="Oblicz koszt spalonej benzyny"
-            android:noHistory="true" >
+            android:label="Oblicz koszt spalonej benzyny"  >
         </activity>
         <activity
             android:name=".MainActivity3"
-            android:label="@string/title_activity_main_activity3"
-            android:noHistory="true" >
+            android:label="@string/title_activity_main_activity3"     >
         </activity>
         <activity
             android:name=".MainActivity4"
-            android:label="@string/title_activity_main_activity4"
-            android:noHistory="true" >
+            android:label="@string/title_activity_main_activity4" >
         </activity>
-        <activity
-            android:name=".MainActivity5"
-            android:label="@string/title_activity_main_activity5" >
-        </activity>
+
         <activity
             android:name=".MainActivity6"
-            android:label="@string/title_activity_main_activity6" >
+            android:label="@string/title_activity_main_activity6">
         </activity>
     </application>
 
