--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.potop66.kalkulatorspalania.klakulatorspalania" >
+    package="com.potop66.kalkulatorspalania.klakulatorspalania">
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
-             >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,22 +17,18 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity2"
-            android:label="Oblicz koszt spalonej benzyny"  >
-        </activity>
+            android:name=".ObliczCeneSpalonejBenzyny"
+            android:label="Oblicz koszt spalonej benzyny"></activity>
         <activity
-            android:name=".MainActivity3"
-            android:label="@string/title_activity_main_activity3"     >
-        </activity>
+            android:name=".ObliczIloscKupionejBenzyny"
+            android:label="@string/title_activity_main_activity3"></activity>
         <activity
-            android:name=".MainActivity4"
-            android:label="@string/title_activity_main_activity4" >
-        </activity>
-
+            android:name=".ObliczSpalanieNa100km"
+            android:label="@string/title_activity_main_activity4"></activity>
         <activity
-            android:name=".MainActivity6"
-            android:label="@string/title_activity_main_activity6">
-        </activity>
+            android:name=".ObliczPrzejechaneKilometry"
+            android:label="@string/title_activity_main_activity6"></activity>
+        <activity android:name=".ObliczIloscSpalonejBenzyny"></activity>
     </application>
 
 </manifest>
