skonczone: przy zmianie jednostki zmiana tekstu w kazdej z opcji kalkulatora

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,18 +18,20 @@
         </activity>
         <activity
             android:name=".ObliczCeneSpalonejBenzyny"
-            android:label="@string/title_activity_main_activity2"/>
+            android:label="@string/title_activity_main_activity2" />
         <activity
             android:name=".ObliczIloscKupionejBenzyny"
-            android:label="@string/title_activity_main_activity3"/>
+            android:label="@string/title_activity_main_activity3" />
         <activity
             android:name=".ObliczSpalanieNa100km"
-            android:label="@string/title_activity_main_activity4"/>
+            android:label="@string/title_activity_main_activity4" />
         <activity
             android:name=".ObliczPrzejechaneKilometry"
-            android:label="@string/title_activity_main_activity6"/>
-        <activity android:name=".ObliczIloscSpalonejBenzyny"
-            android:label="@string/title_activity_main_activity3"/>
+            android:label="@string/title_activity_main_activity6" />
+        <activity
+            android:name=".ObliczIloscSpalonejBenzyny"
+            android:label="@string/title_activity_main_activity3" />
+        <activity android:name=".Settings"></activity>
     </application>
 
 </manifest>
