--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,10 @@ android {
 
     defaultConfig {
         applicationId "com.potop66.kalkulatorspalania.klakulatorspalania"
-        minSdkVersion 9
+        minSdkVersion 11
         targetSdkVersion 21
-        versionCode 4
-        versionName "1.3"
+        versionCode 7
+        versionName "3.0"
     }
     buildTypes {
         release {
@@ -21,5 +21,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.google.firebase:firebase-core:9.8.0'
+    compile 'com.google.android.gms:play-services-ads:9.8.0'
 }
