--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.potop66.kalkulatorspalania.klakulatorspalania">
 
+
+
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -16,22 +21,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ObliczCeneSpalonejBenzyny"
-            android:label="@string/title_activity_main_activity2" />
-        <activity
-            android:name=".ObliczIloscKupionejBenzyny"
-            android:label="@string/title_activity_main_activity3" />
-        <activity
-            android:name=".ObliczSpalanieNa100km"
-            android:label="@string/title_activity_main_activity4" />
-        <activity
-            android:name=".ObliczPrzejechaneKilometry"
-            android:label="@string/title_activity_main_activity6" />
-        <activity
-            android:name=".ObliczIloscSpalonejBenzyny"
-            android:label="@string/title_activity_main_activity3" />
-        <activity android:name=".Settings"></activity>
+
     </application>
 
 </manifest>
